<resources>
    <string name="app_name">Todo_Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_here">Write here!</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="submit">Submit</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
</resources>