<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditFragment"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Write here"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:endIconMode="clear_text"
                    android:layout_margin="10dp"
                    app:boxStrokeColor="@color/btn_color"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTxt" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/Rgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="10dp">

                    <RadioButton
                        android:id="@+id/low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low"
                        android:textSize="16sp"
                        android:textColor="#3D8A83"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/high"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high"
                        android:textSize="16sp"
                        android:textColor="@color/red"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/date_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_back"
                        android:text="@string/pick_date"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:layout_margin="10dp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/time_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_back"
                        android:text="@string/pick_time"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:layout_margin="10dp"
                        android:textStyle="bold" />


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"
                    android:layout_margin="10dp"
                    android:text="@string/update"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textAllCaps="false" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>